...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:text="Login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryWhite">
        </TextView>

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:inputType="textEmailAddress"
            android:hint="Email" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:inputType="textPassword"/>
        <!--            android:layout_width="match_parent"-->
...
            android:background="@drawable/custom_round_button"
            android:layout_marginTop="90dp"
            android:text="Login"
            android:textColor="@color/colorPrimaryWhite"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:id="@+id/btnLogin" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_round_button"
            android:layout_marginTop="0dp"
            android:text="Register Here"
...
