...
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Shop Data"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/btnTransaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardBackgroundColor="@color/choco"
                    app:cardElevation="6dp"
...
